# squarereq

./: CMakeLists.txt  README.md  main.cpp
test/: churn.cpp  churn.h
